--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
 spring.application.name=projeto
+server.port=8081
+
+# A URL deve apontar para o seu MySQL.
+# Se o MySQL estiver na sua máquina e rodando no XAMPP (porta 3306), o 'localhost' funciona.
+spring.datasource.url=jdbc:mysql://localhost:3306/bookly?useSSL=false&serverTimezone=UTC
+
+# Usuário padrão do XAMPP MySQL.
+spring.datasource.username=root
+
+# Senha padrão do XAMPP MySQL (geralmente vazia).
+# Deixe o campo VAZIO, como mostrado abaixo:
+spring.datasource.password=
+
+# Restante das configurações (geralmente não muda):
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
