--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,20 @@
 spring.application.name=projeto
 server.port=8081
 
-# A URL deve apontar para o seu MySQL.
-# Se o MySQL estiver na sua máquina e rodando no XAMPP (porta 3306), o 'localhost' funciona.
-spring.datasource.url=jdbc:mysql://localhost:3306/bookly?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:postgresql://localhost:5432/prog_web_bd
 
-# Usuário padrão do XAMPP MySQL.
-spring.datasource.username=root
+# Driver do PostgreSQL
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Senha padrão do XAMPP MySQL (geralmente vazia).
-# Deixe o campo VAZIO, como mostrado abaixo:
-spring.datasource.password=
+# Usuário e Senha do PostgreSQL.
+# ATENÇÃO: O padrão do PostgreSQL é 'postgres' e a senha é definida na instalação.
+# Ajuste 'sua_senha_aqui' para a sua senha real do Postgres.
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 
-# Restante das configurações (geralmente não muda):
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+spring.jpa.properties.hibernate.format_sql=true
