tela de livro e modal de review

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,24 @@
 spring.application.name=projeto
 server.port=8081
 
-# A URL deve apontar para o seu MySQL.
-# Se o MySQL estiver na sua máquina e rodando no XAMPP (porta 3306), o 'localhost' funciona.
-spring.datasource.url=jdbc:mysql://localhost:3307/bookly?useSSL=false&serverTimezone=UTC
+# --- Configuração PostgreSQL ---
 
-# Usuário padrão do XAMPP MySQL.
-spring.datasource.username=root
+# A porta padrão do Postgres é 5432 (confira se o seu não está em outra)
+spring.datasource.url=jdbc:postgresql://localhost:5432/prog_web_bd
 
-# Senha padrão do XAMPP MySQL (geralmente vazia).
-# Deixe o campo VAZIO, como mostrado abaixo:
-spring.datasource.password=
+# O usuário padrão do Postgres geralmente é 'postgres'
+spring.datasource.username=postgres
 
-# Restante das configurações (geralmente não muda):
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+# COLOQUE AQUI A SUA SENHA (aquela que você definiu ao instalar o Postgres)
+spring.datasource.password=postgres
+
+# O Driver correto para Postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# O Dialeto para o Hibernate conversar com o Postgres
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+# Configurações padrão do JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
