--- a/bookly_frontend/package.json
+++ b/bookly_frontend/package.json
@@ -16,7 +16,7 @@
     "next": "^16.0.8",
     "react": "^19.2.1",
     "react-bootstrap": "^2.10.10",
-    "react-dom": "^19.2.3"
+    "react-dom": "^19.2.3",
     "react-dom": "^19.2.1"
   },
   "devDependencies": {
