modo admin, editar e apagar livro

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 spring.application.name=projeto
 server.port=8081
 
-# --- Configuração PostgreSQL ---
+# --- Configuracao PostgreSQL ---
 
-# A porta padrão do Postgres é 5432 (confira se o seu não está em outra)
+# A porta padrao do Postgres e 5432 (confira se o seu nao esta em outra)
 spring.datasource.url=jdbc:postgresql://localhost:5432/prog_web_bd
 
-# O usuário padrão do Postgres geralmente é 'postgres'
+# O usuario padrao do Postgres geralmente e 'postgres'
 spring.datasource.username=postgres
 
-# COLOQUE AQUI A SUA SENHA (aquela que você definiu ao instalar o Postgres)
+# COLOQUE AQUI A SUA SENHA (aquela que voce definiu ao instalar o Postgres)
 spring.datasource.password=postgres
 
 # O Driver correto para Postgres
@@ -18,7 +18,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # O Dialeto para o Hibernate conversar com o Postgres
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-# Configurações padrão do JPA
+# Configuracoes padrao do JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
