--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "dev": "vite",
-    "build": "cd bookly_frontend && vite build",
+    "build": "cd bookly_frontend && npm install && npm run build",
     "preview": "vite preview"
   },
   "dependencies": {
