--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,24 +1,15 @@
 spring.application.name=projeto
-server.port=8081
 
-# --- Configuracao PostgreSQL ---
+server.port=${PORT:8080}
+server.address=0.0.0.0
 
-# A porta padrao do Postgres e 5432 (confira se o seu nao esta em outra)
-spring.datasource.url=jdbc:postgresql://localhost:5432/prog_web_bd
-
-# O usuario padrao do Postgres geralmente e 'postgres'
-spring.datasource.username=postgres
-
-# COLOQUE AQUI A SUA SENHA (aquela que voce definiu ao instalar o Postgres)
-spring.datasource.password=postgres
-
-# O Driver correto para Postgres
+# ===== DATASOURCE (POSTGRES - NEON) =====
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=
+spring.datasource.password=
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# O Dialeto para o Hibernate conversar com o Postgres
+# ===== JPA / HIBERNATE =====
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-
-# Configuracoes padrao do JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
