--- a/bookly_frontend/package.json
+++ b/bookly_frontend/package.json
@@ -5,9 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "build": "cd bookly_frontend && npm install && npm run build",
+    "start": "cd bookly_frontend && npx vite preview --host 0.0.0.0 --port $PORT"
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
